<resources>
    <string name="app_name">JukeJam</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_homepage">homepage</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_voting_on_songs">VotingOnSongs</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_voting_on_asong">VotingOnASong</string>
    <string name="ribs_lorder">Ribs - Lorder</string>
    <string name="brett_s_birthday">Brett\'s Birthday</string>
    <string name="frank_ocean_nprovider_nprovider">Frank Ocean Provider Provider</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
</resources>
