<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2f6b39"
    tools:context="com.example.leeshie.jukejam.BrowsingQueueHost">

    <TextureView
        android:id="@+id/textureView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/are_you_sure_you_want_to_log_out"
        android:textColor="@color/colorPrimary"
        android:textSize="23sp"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="139dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        tools:layout_editor_absoluteX="74dp"
        tools:layout_editor_absoluteY="228dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no"
        tools:layout_editor_absoluteX="264dp"
        tools:layout_editor_absoluteY="228dp" />


</android.support.constraint.ConstraintLayout>
