<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2f6b39"
    tools:context="com.example.leeshie.jukejam.BrowsingQueueHost">

    <!-- TODO: Update blank fragment layout -->


    <EditText
        android:id="@+id/editText7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:textColor="@color/colorPrimary"
        android:text="@string/brett_s_birthday"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="121dp"
        android:layout_height="93dp"
        android:layout_marginBottom="452dp"
        android:layout_marginEnd="61dp"
        android:layout_marginStart="32dp"
        android:textColor="@color/colorPrimary"
        android:src="@drawable/provider_frank_ocean"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText7" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="87dp"
        android:layout_marginEnd="70dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/frank_ocean_nprovider_nprovider"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/editText7" />


    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="220dp"
        android:layout_height="350dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editText6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:text="White - Frank Ocean"
                android:textColor="@color/colorPrimary" />

            <EditText
                android:id="@+id/editText8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:text="Humble - Kendrick Lamar"
                android:textColor="@color/colorPrimary" />

            <EditText
                android:id="@+id/editText9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:text="LandSlide - Oh Wonder"
                android:textColor="@color/colorPrimary" />

            <EditText
                android:id="@+id/editText14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:text="@string/ribs_lorder"
                android:textColor="@color/colorPrimary" />

            <EditText
                android:id="@+id/editText15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:text="Headlines - Drake"
                android:textColor="@color/colorPrimary"
                tools:ignore="HardcodedText" />


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_keyboard_arrow_down_black"
        app:layout_constraintStart_toEndOf="@+id/nestedScrollView"
        tools:layout_editor_absoluteY="485dp" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_keyboard_arrow_down_black"
        tools:layout_editor_absoluteX="255dp"
        tools:layout_editor_absoluteY="392dp" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_keyboard_arrow_up_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        tools:layout_editor_absoluteY="392dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="3"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        tools:layout_editor_absoluteY="448dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="7"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        tools:layout_editor_absoluteY="400dp" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_keyboard_arrow_down_black"
        tools:layout_editor_absoluteX="255dp"
        tools:layout_editor_absoluteY="348dp" />

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:src="@drawable/ic_keyboard_arrow_up_black"
        android:tint="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        tools:layout_editor_absoluteY="348dp" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_keyboard_arrow_down_black"
        app:layout_constraintStart_toEndOf="@+id/nestedScrollView"
        tools:layout_editor_absoluteY="436dp" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_keyboard_arrow_up_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        tools:layout_editor_absoluteY="436dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="10"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        tools:layout_editor_absoluteY="356dp" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_keyboard_arrow_down_black"
        tools:layout_editor_absoluteX="256dp"
        tools:layout_editor_absoluteY="304dp" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_keyboard_arrow_up_black"
        tools:layout_editor_absoluteX="347dp"
        tools:layout_editor_absoluteY="304dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="10"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        tools:layout_editor_absoluteY="311dp" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_keyboard_arrow_up_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        tools:layout_editor_absoluteY="485dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="1"
        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
        app:layout_constraintHorizontal_bias="0.333"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        tools:layout_editor_absoluteY="493dp" />


    <ImageButton
        android:id="@+id/imageButton12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_play_arrow_black"
        tools:layout_editor_absoluteX="142dp"
        tools:layout_editor_absoluteY="215dp" />

    <ImageButton
        android:id="@+id/imageButton13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_skip_next_black"
        tools:layout_editor_absoluteX="326dp"
        tools:layout_editor_absoluteY="215dp" />

    <ImageButton
        android:id="@+id/imageButton29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back_black"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <ImageButton
        android:id="@+id/imageButton30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_search_black"
        tools:layout_editor_absoluteX="339dp"
        tools:layout_editor_absoluteY="16dp" />


</android.support.constraint.ConstraintLayout>
